--- a/index.html
+++ b/index.html
@@ -52,33 +52,49 @@
         </nav>
     </header>
 
-    <!-- CARRUSEL DE IMÁGENES -->
+   <!-- CARRUSEL DE IMÁGENES -->
     <section id="carruselPrincipal" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carruselPrincipal" data-bs-slide-to="0" class="active"></button>
             <button type="button" data-bs-target="#carruselPrincipal" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#carruselPrincipal" data-bs-slide-to="2"></button>
         </div>
         <div class="carousel-inner">
+            <!-- Imagen 1: Computador -->
             <div class="carousel-item active">
-                <img src="https://via.placeholder.com/1200x400?text=Tecnologia+de+Punta" class="d-block w-100" alt="Banner 1">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded">
+                <img src="https://images.unsplash.com/photo-1593640408182-31c70c8268f5?auto=format&fit=crop&w=1200&q=80" class="d-block w-100" style="height: 400px; object-fit: cover;" alt="Computadores">
+                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded">
                     <h5>Lo último en Procesadores</h5>
-                    <p>Actualiza tu PC con TecnoSmart.</p>
+                    <p>Actualiza tu PC con la mejor tecnología del mercado.</p>
                 </div>
             </div>
+            
+            <!-- Imagen 2: Componentes -->
             <div class="carousel-item">
-                <img src="https://via.placeholder.com/1200x400?text=Ofertas+Especiales" class="d-block w-100" alt="Banner 2">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded">
-                    <h5>Descuentos en Periféricos</h5>
-                    <p>Mejora tu setup gamer hoy mismo.</p>
+                <img src="https://images.unsplash.com/photo-1591488320449-011701bb6704?auto=format&fit=crop&w=1200&q=80" class="d-block w-100" style="height: 400px; object-fit: cover;" alt="Componentes">
+                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded">
+                    <h5>Tarjetas Gráficas</h5>
+                    <p>Potencia gráfica para tus juegos y diseño.</p>
+                </div>
+            </div>
+
+            <!-- Imagen 3: Setup Gamer -->
+            <div class="carousel-item">
+                <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e?auto=format&fit=crop&w=1200&q=80" class="d-block w-100" style="height: 400px; object-fit: cover;" alt="Setup Gamer">
+                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded">
+                    <h5>Accesorios Gamer</h5>
+                    <p>Teclados, mouses y diademas de alta precisión.</p>
                 </div>
             </div>
         </div>
+        
         <button class="carousel-control-prev" type="button" data-bs-target="#carruselPrincipal" data-bs-slide="prev">
             <span class="carousel-control-prev-icon"></span>
+            <span class="visually-hidden">Anterior</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carruselPrincipal" data-bs-slide="next">
             <span class="carousel-control-next-icon"></span>
+            <span class="visually-hidden">Siguiente</span>
         </button>
     </section>
 
