--- a/productos.html
+++ b/productos.html
@@ -71,11 +71,11 @@
             </div>
         </div>
         
-        <!-- Producto 2: SSD -->
+        <!-- Producto 2: SSD (CORREGIDO) -->
         <div class="col">
             <div class="card h-100 shadow-sm">
-                <!-- Imagen de Internet (Unsplash) -->
-                <img src="https://images.unsplash.com/photo-1597872250084-3c4422e5a758?auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="Disco SSD" style="height: 200px; object-fit: cover;">
+                <!-- Imagen Nueva Funcional -->
+                <img src="https://images.unsplash.com/photo-1628283927680-e6992d958567?auto=format&fit=crop&w=500&q=80" class="card-img-top" alt="Disco SSD" style="height: 200px; object-fit: cover;">
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">Disco Estado Sólido 480GB</h5>
                     <p class="card-text text-muted">Marca Adata - SATA III</p>
