--- a/acercade.html
+++ b/acercade.html
@@ -54,13 +54,22 @@
 
    <main class="container my-5">
     <div class="row align-items-center">
-        <div class="col-md-6">
-            <img src="https://via.placeholder.com/600x400?text=Equipo+TecnoSmart" class="img-fluid rounded shadow" alt="Nosotros">
+        <!-- Columna de la Imagen (CORREGIDA) -->
+        <div class="col-md-6 mb-4 mb-md-0">
+            <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&w=800&q=80" class="img-fluid rounded shadow" alt="Equipo TecnoSmart">
         </div>
+        
+        <!-- Columna del Texto -->
         <div class="col-md-6">
-            <h1 class="text-primary">Acerca de TecnoSmart</h1>
-            <p class="lead">Somos líderes en la distribución de partes de computador desde 2025.</p>
-            <p>Nuestra misión es ofrecer tecnología de punta al mejor precio del mercado, garantizando soporte técnico especializado y garantía real en todos nuestros productos.</p>
+            <h1 class="text-primary mb-3">Acerca de TecnoSmart</h1>
+            <p class="lead fw-bold text-dark">Somos líderes en la distribución de partes de computador desde 2025.</p>
+            <p class="text-secondary">Nuestra misión es ofrecer tecnología de punta al mejor precio del mercado, garantizando soporte técnico especializado y garantía real en todos nuestros productos.</p>
+            
+            <ul class="list-unstyled mt-4">
+                <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> Soporte 24/7</li>
+                <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> Envíos a todo el país</li>
+                <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> Garantía extendida</li>
+            </ul>
         </div>
     </div>
 </main>
