--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
     <!-- ENCABEZADO Y MENÚ DE NAVEGACIÓN -->
     <header class="sticky-top">
+        <!-- En el HEADER -->
+<button class="btn btn-link text-white position-relative p-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCarrito">
+    <i class="fas fa-shopping-cart fs-5"></i>
+    <span id="contador-carrito" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-size: 0.6rem;">0</span>
+</button>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow">
             <div class="container">
                 <a class="navbar-brand fw-bold" href="index.html">
