--- a/carrito.html
+++ b/carrito.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TecnoSmart - Carrito y Checkout</title>
-  <link rel="stylesheet" href="css/carrito.css">
+  <link rel="stylesheet" href="assets/css/carrito.css">
 </head>
 <body>
 
@@ -100,6 +100,6 @@
     </div>
   </section>
 
-  <script src="js/carrito.js"></script>
+  <script src="assets/js/carrito.js"></script>
 </body>
 </html>
