--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
   <!-- <script src="assets/js/bootstrap.bundle.min.js"></script> -->
 
   <!-- JS general del sitio -->
-  <script src="assets/js/scripts.js"></script>
+  <script src="assets/js/script.js"></script>
 
   <!-- JS del carrito -->
   <script src="assets/js/carrito.js"></script>
