--- a/carrito.html
+++ b/carrito.html
@@ -100,6 +100,6 @@
     </div>
   </section>
 
- <script src="js/carrito.js"></script>
+ <script src="assets/js/script.js"></script>
 </body>
 </html>
