--- a/carrito.html
+++ b/carrito.html
@@ -99,8 +99,8 @@
       </aside>
     </div>
   </section>
-
+ <script src="assets/js/carrito.js"></script>
  <script src="assets/js/script.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
