--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
   <!-- JS general del sitio -->
   <script src="assets/js/script.js"></script>
 
+  <script src="assets/js/carrito.js"></script>
+
 
 </body>
 </html>
