--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TecnoSmart - Inicio</title>
   
-  <!-- CSS Bootstrap (Opción CDN o local, usa solo UNA) -->
+  <!-- CSS Bootstrap (local) -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- FontAwesome (Iconos) -->
@@ -14,7 +14,7 @@
   <!-- Tu CSS Personalizado -->
   <link rel="stylesheet" href="assets/css/style.css">
 
-  <!-- CSS carrito -->
+  <!-- CSS carrito (opcional para estilos extra) -->
   <link rel="stylesheet" href="assets/css/carrito.css">
 </head>
 
@@ -198,114 +198,31 @@
         <span>Total:</span>
         <span id="carrito-total">$0</span>
       </div>
+      <button class
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasCarrito" aria-labelledby="offcanvasLabel">
+    <div class="offcanvas-header bg-primary text-white">
+      <h5 class="offcanvas-title" id="offcanvasLabel">
+        <i class="fas fa-shopping-cart me-2"></i>Tu Carrito
+      </h5>
+      <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <div id="carrito-contenedor" class="d-flex flex-column gap-3">
+        <p class="text-center text-muted">El carrito está vacío</p>
+      </div>
+      <hr>
+      <div class="d-flex justify-content-between fw-bold fs-5">
+        <span>Total:</span>
+        <span id="carrito-total">$0</span>
+      </div>
       <button class="btn btn-success w-100 mt-3" id="btnFinalizarCompra">
         Finalizar Compra
       </button>
     </div>
   </div>
-  <!-- Carrito -->
-  <section id="cart" class="page active">
-    <button class="back-btn" data-target="home" type="button">← Volver</button>
-    <h2>Carrito</h2>
-    <div id="cartItems"></div>
-    <div class="cart-footer">
-      <div>Subtotal: <strong id="cartTotal">$0</strong></div>
-      <button id="btnCheckout" type="button">Finalizar compra</button>
-    </div>
-  </section>
-
-  <!-- Checkout -->
-  <section id="checkout" class="page">
-    <button class="back-btn" data-target="cart" type="button">← Volver al carrito</button>
-    <h2>Checkout</h2>
-
-    <div class="checkout-layout">
-      <!-- Columna izquierda: datos -->
-      <form id="checkoutForm" class="checkout-form">
-        <h3>Datos de contacto</h3>
-        <div class="form-group">
-          <label for="name">Nombre completo</label>
-          <input id="name" name="name" type="text" required placeholder="Juan Pérez">
-        </div>
-        <div class="form-group">
-          <label for="email">Correo electrónico</label>
-          <input id="email" name="email" type="email" required placeholder="correo@ejemplo.com">
-        </div>
-        <div class="form-group">
-          <label for="phone">Teléfono</label>
-          <input id="phone" name="phone" type="tel" required placeholder="3001234567">
-        </div>
-
-        <h3>Dirección de envío</h3>
-        <div class="form-group">
-          <label for="address">Dirección</label>
-          <input id="address" name="address" type="text" required placeholder="Calle 00 #00-00">
-        </div>
-        <div class="form-row">
-          <div class="form-group">
-            <label for="city">Ciudad</label>
-            <input id="city" name="city" type="text" required placeholder="Barranquilla">
-          </div>
-          <div class="form-group">
-            <label for="zip">Código postal</label>
-            <input id="zip" name="zip" type="text" required placeholder="080001">
-          </div>
-        </div>
-
-        <h3>Pago (simulado)</h3>
-        <div class="form-group">
-          <label for="cardNumber">Número de tarjeta</label>
-          <input id="cardNumber" name="cardNumber" type="text" inputmode="numeric"
-                 minlength="13" maxlength="19" required placeholder="4242 4242 4242 4242">
-        </div>
-        <div class="form-row">
-          <div class="form-group">
-            <label for="cardExp">Fecha exp.</label>
-            <input id="cardExp" name="cardExp" type="text" required placeholder="MM/AA">
-          </div>
-          <div class="form-group">
-            <label for="cardCvc">CVC</label>
-            <input id="cardCvc" name="cardCvc" type="text" inputmode="numeric"
-                   minlength="3" maxlength="4" required placeholder="123">
-          </div>
-        </div>
-
-        <button type="submit" class="btn-primary full-width">
-          Confirmar pedido
-        </button>
-      </form>
-
-      <!-- Columna derecha: resumen -->
-      <aside class="checkout-summary">
-        <h3>Resumen del pedido</h3>
-        <div id="checkoutSummaryItems"></div>
-        <div class="summary-row">
-          <span>Subtotal</span>
-          <strong id="summarySubtotal">$0</strong>
-        </div>
-        <div class="summary-row">
-          <span>Envío</span>
-          <span>Gratis</span>
-        </div>
-        <div class="summary-row total">
-          <span>Total</span>
-          <strong id="summaryTotal">$0</strong>
-        </div>
-      </aside>
-    </div>
-  </section>
 
   <!-- SCRIPTS (solo una zona de scripts, al final del body) -->
-
-  <!-- Bootstrap JS (elige una opción: CDN o local) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Si prefieres local, comenta la línea de arriba y descomenta esta -->
-  <!-- <script src="assets/js/bootstrap.bundle.min.js"></script> -->
-
-  <!-- JS general del sitio -->
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/script.js"></script>
-
-
-
 </body>
 </html>
