--- a/index.html
+++ b/index.html
@@ -181,7 +181,6 @@
     </div>
   </footer>
 
-  <!-- OFFCANVAS CARRITO -->
   <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasCarrito" aria-labelledby="offcanvasLabel">
     <div class="offcanvas-header bg-primary text-white">
       <h5 class="offcanvas-title" id="offcanvasLabel">
@@ -220,7 +219,49 @@
       </button>
     </div>
   </div>
+ <!-- Checkout -->
+    <section id="checkout" class="page">
+      <button class="back-btn" data-target="cart">← Volver al carrito</button>
+      <h2>Checkout</h2>
+      <form id="checkoutForm" class="checkout-form">
+        <label>Nombre completo
+          <input name="name" required />
+        </label>
+        <label>Correo electrónico
+          <input name="email" type="email" required />
+        </label>
+        <label>Dirección
+          <input name="address" required />
+        </label>
+        <label>Ciudad
+          <input name="city" required />
+        </label>
+        <label>Método de pago
+          <select name="payment" required>
+            <option value="">Seleccione...</option>
+            <option value="card">Tarjeta</option>
+            <option value="pse">PSE</option>
+            <option value="nequi">Nequi/Daviplata</option>
+            <option value="cod">Contraentrega</option>
+          </select>
+        </label>
 
+        <div class="order-summary">
+          <h4>Resumen del pedido</h4>
+          <div id="checkoutSummary"></div>
+        </div>
+
+        <button type="submit" class="confirm-btn">Confirmar compra</button>
+      </form>
+    </section>
+
+    <!-- Message modal simple -->
+    <div id="toast" class="toast"></div>
+  </main>
+
+  <footer class="app-footer">
+    <small>© <span id="year"></span> TecnoSmart • Repuestos de Computador</small>
+  </footer>
   <!-- SCRIPTS (solo una zona de scripts, al final del body) -->
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/script.js"></script>
