--- a/productos.html
+++ b/productos.html
@@ -124,7 +124,7 @@
 
     <!-- SCRIPTS OBLIGATORIOS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
 
