--- a/acercade.html
+++ b/acercade.html
@@ -116,25 +116,35 @@
     <!-- ... Aquí termina tu footer ... -->
     </footer>
 
-    <!-- === AQUÍ DEBE IR EL CÓDIGO DEL CARRITO (OFFCANVAS) === -->
-    <!-- Si lo pones arriba, se rompe el diseño. Déjalo aquí abajo. -->
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasCarrito" aria-labelledby="offcanvasLabel">
-        <div class="offcanvas-header bg-primary text-white">
-            <h5 class="offcanvas-title" id="offcanvasLabel"><i class="fas fa-shopping-cart me-2"></i>Tu Carrito</h5>
-            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-            <div id="carrito-contenedor" class="d-flex flex-column gap-3">
-                <p class="text-center text-muted">El carrito está vacío</p>
-            </div>
-            <hr>
-            <div class="d-flex justify-content-between fw-bold fs-5">
-                <span>Total:</span>
-                <span id="carrito-total">$0</span>
-            </div>
-            <button class="btn btn-success w-100 mt-3" onclick="alert('Compra realizada')">Finalizar Compra</button>
-        </div>
+   <!-- OFFCANVAS CARRITO -->
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasCarrito" aria-labelledby="offcanvasLabel">
+  <div class="offcanvas-header bg-primary text-white">
+    <h5 class="offcanvas-title" id="offcanvasLabel">
+      <i class="fas fa-shopping-cart me-2"></i>Tu Carrito
+    </h5>
+    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <div id="carrito-contenedor" class="d-flex flex-column gap-3">
+      <p class="text-center text-muted">El carrito está vacío</p>
     </div>
+    <hr>
+    <div class="d-flex justify-content-between fw-bold fs-5">
+      <span>Total:</span>
+      <span id="carrito-total">$0</span>
+    </div>
+    <button class="btn btn-success w-100 mt-3" id="btnFinalizarCompra">
+      Continuar al checkout
+    </button>
+  </div>
+</div>
+<button class="btn btn-link text-white position-relative p-0" type="button"
+        data-bs-toggle="offcanvas" data-bs-target="#offcanvasCarrito">
+  <i class="fas fa-shopping-cart fs-5"></i>
+  <span id="contador-carrito"
+        class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+        style="font-size: 0.6rem;">0</span>
+</button>
 
     <!-- SCRIPTS OBLIGATORIOS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
